# RecordMapper

./: .gitignore  .noseids  LICENSE  README.md  pyproject.toml  setup.py
RecordMapper/: RecordMapper.py  __init__.py  types.py  utils.py
RecordMapper/appliers/: CleanApplier.py  NestedSchemaSelectorApplier.py  RenameApplier.py  TransformApplier.py  __init__.py  transform_functions.py
RecordMapper/avro/: AvroReader.py  AvroWriter.py  __init__.py
RecordMapper/builders/: BuiltinFunctions.py  FlatRecordBuilder.py  FlatSchemaBuilder.py  FunctionBuilder.py  __init__.py
RecordMapper/common/: Reader.py  Writer.py  __init__.py
RecordMapper/csv/: CSVReader.py  CSVWriter.py  __init__.py
RecordMapper/xml/: XMLReader.py
tests/: custom_functions_for_tests.py  test_RecordMapper.py
tests/appliers/: test_CleanApplier.py  test_NestedSchemaSelectorApplier.py  test_RenameApplier.py  test_TransformApplier.py  test_transform_functions.py
tests/avro/: test_avro_classes.py
tests/builders/: test_BuiltinFunctions.py  test_FlatRecordBuilder.py  test_FlatSchemaBuilder.py  test_FunctionBuilder.py
tests/csv/: test_csv_classes.py
tests/files/: test_1.csv
