[tool]
[tool.poetry]
name = "RecordMapper"
version = "0.6.3"
description = "Transform records using an Avro Schema and custom map functions"
classifiers = ["License :: OSI Approved :: MIT License"]
homepage = "https://github.com/urbandataanalytics/RecordMapper"
authors = ["UDARealState Data engineering Team"]
readme = "README.md"

packages = [
    { include = "RecordMapper" },
]


[tool.poetry.dependencies]
python = "^3.7"
coverage = "~4.5.4"
dateparser = "~1.0.0"
defusedxml = "~0.6.0"
fastavro = "~0.23.4"
nose = "~1.3.7"
