[tool]
[tool.poetry]
name = "RecordMapper"
version = "0.7"
description = "Transform records using an Avro schema and custom map functions."
classifiers = ["License :: OSI Approved :: MIT License"]
homepage = "https://github.com/urbandataanalytics/RecordMapper"
authors = ["uDARealEstate Data Engineering Team"]
readme = "README.md"

packages = [
    { include = "RecordMapper" },
]


[tool.poetry.dependencies]
python = "^3.7"
coverage = "~4.5.4"
dateparser = "~1.0.0"
defusedxml = "~0.7.1"
fastavro = "~1.4"
nose = "~1.3.7"
